--- a/PLATFORM/Modules/Core/VirtoCommerce.Domain/VirtoCommerce.Domain.csproj
+++ b/PLATFORM/Modules/Core/VirtoCommerce.Domain/VirtoCommerce.Domain.csproj
@@ -275,6 +275,13 @@
     <Compile Include="Store\Model\Store.cs" />
     <Compile Include="Store\Model\StoreState.cs" />
     <Compile Include="Store\Services\IStoreService.cs" />
+    <Compile Include="Tax\Model\TaxEvaluationContext.cs" />
+    <Compile Include="Tax\Model\TaxLine.cs" />
+    <Compile Include="Tax\Model\TaxProvider.cs" />
+    <Compile Include="Tax\Model\TaxRate.cs" />
+    <Compile Include="Tax\Model\TaxRequest.cs" />
+    <Compile Include="Tax\Services\ITaxService.cs" />
+    <Compile Include="Tax\Services\TaxServiceImpl.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\VirtoCommerce.Platform.Core\VirtoCommerce.Platform.Core.csproj">
